Fixed board sizing on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@
 }
 
 .board {
-  width: 700px;
+  width: 45%;
   margin: 20px;
 }
 
